# GCI

./: .gitignore  pyproject.toml
NFL_Draft/notebook/: README.ipynb  baseline.ipynb  models.py  objective.py  target_rate.py  train.ipynb
titanic/: README.ipynb
titanic/demo/: beginner.ipynb  professional.ipynb
titanic/notebook/: catboost.ipynb  data.ipynb  lightgbm.ipynb  logistic.ipynb  models.py  objective.py  params.py  randomforest.ipynb  target_rate.py  titanic.ipynb  train.ipynb
titanic/notebook/.ipynb_checkpoints/: logistic-checkpoint.ipynb
