[project]
name = "gci"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.2",
    "jupyterlab-git>=0.51.1",
    "jupyterlab-github>=4.0.0",
    "jupyterlab-lsp>=5.1.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
